# skal

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
editor/: CMakeLists.txt
editor/src/: editor.cpp  editor.h  editor_context.cpp  editor_context.h  main.cpp
editor/src/editor_stuff/: console_panel.cpp  console_panel.h  editor_panel_interface.cpp  editor_panel_interface.h  imgui_demo_panel.cpp  imgui_demo_panel.h  stats_panel.cpp  stats_panel.h  viewport.cpp  viewport.h
editor/src/imgui/: imgui_debug_ui.cpp  imgui_debug_ui.h
editor/src/utils/: file_dialogue.cpp  file_dialogue.h  project_dialog.cpp  project_dialog.h
engine/: CMakeLists.txt
engine/include/skal/: application.h  build_config.h  engine.h  project.h  uuid_types.h
engine/include/skal/device/: device.h
engine/include/skal/device/platform/sdl3/: device_sdl3.h
engine/include/skal/ecs/: scene.h  scene_manager.h
engine/include/skal/ecs/components/: engine_component_tags.h  transform_component.h  uuid_component.h
engine/include/skal/file_io/: file_io.h
engine/include/skal/input/: input.h
engine/include/skal/math/: math_constants.h  math_types.h
engine/include/skal/platform/opengl/: frame_buffer_gl.h  image_gl.h  mesh_gl.h  resource_pool_gl.h
engine/include/skal/platform/sdl3/device/: device_sdl3.h
engine/include/skal/platform/sdl3/input/: input_sdl3.h
engine/include/skal/renderer/: graphic_api.h  renderer.h
engine/include/skal/renderer/backend/opengl/: renderer_gl.h
engine/include/skal/renderering/: renderer.h
engine/include/skal/resource/: asset_importer.h  resource_handle.h  resource_indexer.h  resource_interface.h  resource_manager.h  resource_types.h
engine/include/skal/resource/types/: material_resource.h  mesh_resource.h  scene_resource.h  shader_resource.h  texture_resource.h
engine/include/skal/util/: color_constants.h  debug_ui.h  json_helper.h  log.h  uuid.h
engine/src/: application.cpp  engine.cpp
engine/src/device/platform/sdl3/: device_sdl3.cpp
engine/src/ecs/: scene.cpp  scene_manager.cpp
engine/src/ecs/components/: transform_component.cpp
engine/src/file_io/: file_io.cpp
engine/src/input/platform/sdl3/: input_sdl3.cpp
engine/src/platform/opengl/: frame_buffer_gl.cpp  image_gl.cpp  mesh_gl.cpp  renderer_gl.cpp
engine/src/platform/pc/: file_io_pc.cpp
engine/src/platform/sdl3/: device_sdl3.cpp  imgui_debug_ui.cpp  input_sdl3.cpp
engine/src/resource/: asset_importer.cpp  resource_handle.cpp  resource_indexer.cpp  resource_interface.cpp  resource_manager.cpp  resource_types.cpp
engine/src/resource/types/: mesh_resource.cpp  scene_resource.cpp  texture_resource.cpp
engine/src/util/: log.cpp
player/: CMakeLists.txt
player/src/: main.cpp
sample_project/: project.skal
sample_project/assets/: cube.mesh
sample_project/assets/scenes/: default.scene
sample_project/editor/: editor_layout_default.ini
